# document-intelligence-refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  EXTRACTION_QUALITY_ANALYSIS.md  EXTRACTION_ROUTER.md  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  WALKTHROUGH.md  docling_full_log.txt  pyproject.toml  refinery_cli.py  requirements.txt  run_batch.py  run_batch_new.py  run_batch_triage_extract.py  run_extraction.py  run_full_batch.py  run_indexer.py  run_phase3.py  run_phase4.py  run_query_agent.py  run_single.py  run_triage.py  test_qa.py
.refinery/: extraction_ledger.jsonl
.refinery/ldus/: 0cbf3d5168b07ccdccd6a4a864d64d08ef3a12b64fdb6970364a08ef5913a837_ldus.json  2f53e5b7802a859879160cbe5faee369a8f9e46e5946cec180362f7c3cd12aa9_ldus.json  3dcc4ba345da70eda99164b767c174fc5e08a38203f80358d9e8c9deb69794a6_ldus.json  49fd54234b5f0cea2d10980307ce2aee7a3d514bb85676a20fa0a68336839d6e_ldus.json  4b172fa2708161f9b75c6bc224115ed522f80226821501e7a9ff7b2f3615e61a_ldus.json  7febcc03cf8e0523887fcea47959f981e483b21ac1fc1adc41075da565502d84_ldus.json  87102d9cda89c0e82fc517ee5252e00a1e05e4a6d6f6e85eaf92b5148930d045_ldus.json  (+5 more)
.refinery/metrics/: query_log.jsonl
rubric/: extraction_rules.yaml
scripts/: analyze_docling.py  analyze_pdfplumber.py  docling_results_Class_A.json  docling_results_Class_B.json  docling_results_Class_C.json  docling_results_Class_D.json  extraction_quality_report.py  pdfplumber_results.json
src/agents/: __init__.py  (+9 more)
tests/: test_auditor.py  test_chunker.py  test_extraction.py  test_fact_table.py  test_query_agent.py  test_triage.py
(+41 files in other folders)
